syntax = "proto3";

package life;
option go_package = "github.com/ugora/gameoflife/proto;life";

/*── Service : un plateau global 500×500, vues (viewport) par client ─────────*/
service GameOfLife {
  rpc StreamBoards (ViewportRequest) returns (stream Board);
}

/*── Requête : rectangle à afficher ──────────────────────────────────────────*/
message ViewportRequest {
  int32 view_x = 1;   // coin X (0 ≤ x < 500)
  int32 view_y = 2;   // coin Y (0 ≤ y < 500)
  int32 view_w = 3;   // largeur  (≤ 500)
  int32 view_h = 4;   // hauteur  (≤ 500)
}

/*── Éléments de jeu ─────────────────────────────────────────────────────────*/
message Cell  { int32 x = 1; int32 y = 2; }        // coord. relatives au viewport
message Board { int32 generation = 1; repeated Cell alive = 2;   int64        sent_unixns = 3;}
